# glyim-v2

./: .gitignore  Cargo.toml  README.md  check_output.txt  clippy_output.txt  diff.diff  generate-all-streams.sh  justfile  test_output.txt
crates/glyim-borrowck/: Cargo.toml
crates/glyim-borrowck/src/: lib.rs  lib.rs.bak  liveness.rs  move_analysis.rs  twophase.rs  visitor.rs
crates/glyim-borrowck/src/tests/: borrow_tests.rs  conflicts.rs  cross_block.rs  deep_cfg.rs  double_mutable_borrow.rs  drop_check.rs  edge_cases.rs  interior_mutability.rs  loans.rs  loops.rs  mir_builder.rs  mod.rs  move_tests.rs  partial_move.rs  same_block.rs  test_ctx.rs  two_phase_borrows.rs  two_phase_reservation.rs  use_after_move.rs  write_conflicts.rs
crates/glyim-cli/: Cargo.toml
crates/glyim-cli/src/: lib.rs  main.rs
crates/glyim-cli/src/tests/: cli.rs  cli_tests.rs  mod.rs
crates/glyim-codegen/: Cargo.toml
crates/glyim-codegen-llvm/: Cargo.toml
crates/glyim-codegen-llvm/src/: abi.rs  abi_passmode.rs  debug.rs  debug_info.rs  lib.rs  lib.rs.patch  lower.rs  passes.rs  types.rs
crates/glyim-codegen-llvm/src/tests/: abi_classify.rs  aggregate_lowering.rs  assert_terminator.rs  bitwise_ops.rs  call_abi.rs  call_c_abi.rs  call_cleanup.rs  call_direct.rs  call_fn_ptr.rs  call_large_struct_arg.rs  call_multi_args.rs  call_sret.rs  call_sret_with_args.rs  call_struct_args.rs  call_void_return.rs  cast_ops.rs  comparisons.rs  compliance_tests.rs  debug_info.rs  drop_dealloc.rs  edge_cases.rs  field_projection.rs  float_arith.rs  float_lowering.rs  helpers.rs  integer_arith.rs  len_lowering.rs  llvm_backend_tests.rs  llvm_module.rs  logical_ops.rs  mod.rs  object_format_tests.rs  optimisation.rs  overflow_checks.rs  pass_mode.rs  repeat_lowering.rs  rvalue_aggregate.rs  s09_mappings.rs  stress_tests.rs  string_constant.rs  (+5 more)
crates/glyim-codegen/src/: lib.rs  vtable.rs
crates/glyim-codegen/src/tests/: abi.rs  aggregate.rs  backend_tests.rs  binary_ops.rs  bytecode_tests.rs  cast.rs  comprehensive.rs  constants.rs  discriminant_len.rs  existing.rs  layout.rs  mod.rs  terminators.rs  trait_objects.rs  unary_ops.rs
crates/glyim-db/: Cargo.toml
crates/glyim-db/src/: db_helpers.rs  lib.rs
crates/glyim-db/src/tests/: basic.rs
crates/glyim-def-map/: Cargo.toml
crates/glyim-def-map/src/: lib.rs
crates/glyim-def-map/src/tests/: build_def_map.rs  def_map_tests.rs  mod.rs  resolve_path.rs  test_utils.rs  use_declarations.rs  visibility.rs
crates/glyim-hir/: Cargo.toml
crates/glyim-hir/src/: lib.rs  lib.rs.bak  lib.rs.broken  lower.rs  lower.rs.bak  pipeline_api.rs  where_clause.rs
crates/glyim-hir/src/lower/: lower_expr.rs  lower_expr.rs.bak  lower_item.rs  lower_item.rs.bak  lower_pat.rs  lower_type.rs  mod.rs
crates/glyim-hir/src/tests/: expr_lowering.rs  lower_comprehensive.rs  lower_edge.rs  lower_enum.rs  lower_expr.rs  lower_expr_tests.rs  lower_fn.rs  lower_more.rs  lower_parser_nodes.rs  lower_pat.rs  lower_pat_tests.rs  lower_struct.rs  lower_stubs.rs  lower_type.rs  mod.rs  number_suffix.rs  pattern_lowering.rs  type_lowering.rs
crates/glyim-lang-alloc/: Cargo.toml
crates/glyim-lang-alloc/lib/: alloc.g  boxed.g  raw_vec.g  rc.g  string.g  vec.g
crates/glyim-lang-alloc/src/: alloc.rs  boxed.rs  lib.rs  raw_vec.rs  rc.rs  string.rs  vec.rs
crates/glyim-lang-alloc/src/tests/: alloc_tests.rs  boxed_tests.rs  compile_pass.rs  core_source.rs  mod.rs  module_integrity.rs  rc_tests.rs  source_quality.rs  string_tests.rs  vec_tests.rs
crates/glyim-lang-alloc/tests/compile-pass/: box_alloc.g  box_deref_mut.g  from_iter.g  rc_clone.g  string_concat.g  string_default.g  vec_extend.g  vec_pop.g  vec_push.g
crates/glyim-lower/: Cargo.toml
crates/glyim-lower/src/: builder.rs  discovery.rs  lib.rs  lower.rs  lower_fix.patch  lower_rvalue.rs  lower_terminator.rs  mono.rs  partition.rs  polymorphize.rs  post_mono_checks.rs
crates/glyim-lower/src/tests/: aggregate.rs  array_index.rs  array_literal.rs  block_tail.rs  break_continue.rs  cast.rs  closure.rs  closure_advanced.rs  drop_glue.rs  error_paths.rs  expr_stmt.rs  field_access.rs  field_access_resolution.rs  fnref_lowering.rs  for_loop.rs  for_loop_advanced.rs  mod.rs  (+31 more)
crates/glyim-lsp/: Cargo.toml
crates/glyim-lsp/src/: code_action.rs  completion.rs  database.rs  diagnostics.rs  driver.rs  driver.rs.bak  folding.rs  formatting.rs  goto_definition.rs  handler.rs  hover.rs  lib.rs  lib.rs.bak  navigation.rs  navigation.rs.bak  reference_graph.rs  rename.rs  rename.rs.bak  server.rs  state.rs  symbol_index.rs  uri.rs
crates/glyim-meta/: Cargo.toml
crates/glyim-meta/src/: lib.rs
crates/glyim-mir-interp/: Cargo.toml
crates/glyim-mir-interp/src/: interp_error.rs  interp_value.rs  lib.rs  lib.rs.bak  lib.rs.orig
crates/glyim-pipeline/: Cargo.toml
crates/glyim-pipeline/src/: lib.rs  mono_cache.rs  mono_cache_new.rs  pipeline_context.rs
crates/glyim-solve/: Cargo.toml
crates/glyim-solve/src/: fulfill.rs  hrtb.rs  infer.rs  lib.rs  solver.rs
crates/glyim-test/: Cargo.toml
crates/glyim-test-mocks/: Cargo.toml
crates/glyim-test-mocks/src/: lib.rs
crates/glyim-test/src/: error.rs  lib.rs  tests.rs
crates/glyim-type/: Cargo.toml
crates/glyim-type/src/: adt_def.rs  auto_trait.rs  binder.rs  const_val.rs  context.rs  display.rs  flags.rs  fn_sig.rs  lib.rs  object_safety.rs  predicate.rs  region.rs  substitution.rs  ty.rs  ty_ctx.rs  ty_ctx_mut.rs
crates/glyim-typeck/: Cargo.toml
crates/glyim-typeck/src/: check_body.rs  check_body.rs.bak  check_expr.rs  check_pat.rs  check_stmt.rs  coherence.rs  env.rs  lib.rs  thir.rs  tyconv.rs  unify.rs
crates/glyip/: Cargo.toml
crates/glyip/src/: cache.rs  commands.rs  config.rs  dep.rs  error.rs  fingerprint.rs  lib.rs  lockfile.rs
tools/glyim-pilot/: Cargo.toml  ERROR_CODES.md
tools/glyim-pilot/extension/: manifest.json  package.json  pnpm-lock.yaml  tsconfig.json
tools/glyim-pilot/spec/: TECH_STACK.md  plan.md  plan2.md  plan3.md  plan4.md  plan5.md  v0.1.0.md
tools/glyim-pilot/src/: domain_types.rs  error.rs  lib.rs  main.rs  metrics.rs  process.rs
(+723 files in other folders)
