[package]
name = "glyim-borrowck"
edition.workspace = true
version.workspace = true

[dependencies]
fixedbitset = { workspace = true }
glyim-type = { workspace = true }
glyim-mir = { workspace = true }
glyim-span = { workspace = true }
glyim-diag = { workspace = true }

[dev-dependencies]
glyim-core = { workspace = true }
glyim-test = { workspace = true }
