[package]
name = "glyim-cli"
edition.workspace = true
version.workspace = true

[dependencies]
glyim-db = { workspace = true }
glyim-pipeline = { workspace = true }
glyim-codegen-llvm = { workspace = true }
glyim-diag = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
