[package]
name = "glyim-codegen-llvm"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
glyim-codegen = { workspace = true }
glyim-diag = { workspace = true }
glyim-mir = { workspace = true }
glyim-core = { workspace = true }
glyim-span = { workspace = true }
glyim-type = { workspace = true }
inkwell = { workspace = true, features = ["llvm22-1"] }

[dev-dependencies]
glyim-test = { workspace = true }
