[package]
name = "glyim-codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
glyim-core = { workspace = true }
glyim-diag = { workspace = true }
glyim-mir = { workspace = true }
glyim-type = { workspace = true }
glyim-layout = { workspace = true }
glyim-span = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
glyim-test = { workspace = true }
