[package]
name = "glyim-db"
edition.workspace = true
version.workspace = true

[dependencies]
glyim-core = { workspace = true }
glyim-span = { workspace = true }
glyim-diag = { workspace = true }
glyim-vfs = { workspace = true }
glyim-type = { workspace = true }
glyim-solve = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
glyim-test = { workspace = true }
