[package]
name = "glyim-hir"
edition.workspace = true
version.workspace = true

[dependencies]
tracing = { workspace = true }
glyim-syntax = { workspace = true }
glyim-core = { workspace = true }
glyim-span = { workspace = true }


[dev-dependencies]
rowan = { workspace = true }
glyim-frontend = { workspace = true }
glyim-test = { workspace = true }