[package]
name = "glyim-meta"
edition.workspace = true
version.workspace = true

[dependencies]
glyim-core = { workspace = true }
rowan = { workspace = true }
smol_str = { workspace = true }
glyim-span = { workspace = true }
glyim-syntax = { workspace = true }
glyim-diag = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
glyim-frontend = { workspace = true }
glyim-test = { workspace = true }
