[package]
name = "glyim-mir-interp"
version.workspace = true
edition.workspace = true

[dependencies]
glyim-core = { workspace = true }
glyim-span = { workspace = true }
glyim-mir = { workspace = true }
glyim-type = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
glyim-test = { workspace = true }
