[package]
name = "glyim-pipeline"
edition.workspace = true
version.workspace = true

[dependencies]
glyim-core = { workspace = true }
glyim-span = { workspace = true }
glyim-diag = { workspace = true }
glyim-vfs = { workspace = true }
glyim-frontend = { workspace = true }
glyim-def-map = { workspace = true }
glyim-hir = { workspace = true }
glyim-type = { workspace = true }
glyim-typeck = { workspace = true }
glyim-lower = { workspace = true }
glyim-borrowck = { workspace = true }
glyim-opt = { workspace = true }
glyim-codegen = { workspace = true }
glyim-codegen-llvm = { workspace = true }
glyim-solve = { workspace = true }
glyim-db = { workspace = true }
glyim-mir = { workspace = true }
tracing = { workspace = true }
[dev-dependencies]
glyim-test = { workspace = true }
