[package]
name = "glyim-solve"
edition.workspace = true
version.workspace = true

[dependencies]
glyim-core = { workspace = true }
glyim-type = { workspace = true }
glyim-diag = { workspace = true }
glyim-span = { workspace = true }
tracing = { workspace = true }


[dev-dependencies]
glyim-test = { workspace = true }