[package]
name = "glyim-test-mocks"
version.workspace = true
edition.workspace = true

[dependencies]
glyim-core = { workspace = true }
glyim-mir = { workspace = true }
glyim-type = { workspace = true }
glyim-diag = { workspace = true }
glyim-borrowck = { workspace = true }
glyim-lower = { workspace = true }
glyim-codegen = { workspace = true }
glyim-pipeline = { workspace = true }
glyim-db = { workspace = true }
glyim-span = { workspace = true }
parking_lot = { workspace = true }
