[package]
name = "glyim-test"
edition.workspace = true
version.workspace = true
[dependencies]
glyim-core = { workspace = true }
glyim-span = { workspace = true }
glyim-diag = { workspace = true }
glyim-frontend = { workspace = true }
glyim-type = { workspace = true }
glyim-mir = { workspace = true }
glyim-lower = { workspace = true }
glyim-borrowck = { workspace = true }
glyim-codegen = { workspace = true }
insta = { workspace = true }
tracing = { workspace = true }
