[package]
name = "glyim-type"
edition.workspace = true
version.workspace = true

[dependencies]
glyim-core = { workspace = true }
glyim-span = { workspace = true }
indexmap = { workspace = true }
smallvec = { workspace = true }
bitflags = { workspace = true }
tracing = { workspace = true }


[dev-dependencies]
glyim-test = { workspace = true }
