[package]
name = "glyim-typeck"
edition.workspace = true
version.workspace = true
[dependencies]
glyim-core = { workspace = true }
glyim-type = { workspace = true }
glyim-hir = { workspace = true }
glyim-solve = { workspace = true }
glyim-def-map = { workspace = true }
glyim-diag = { workspace = true }
glyim-span = { workspace = true }
tracing = { workspace = true }
