[package]
name = "glyim-typeck"
version.workspace = true
edition.workspace = true

[dependencies]
glyim-core = { workspace = true }
glyim-type = { workspace = true }
glyim-diag = { workspace = true }
glyim-solve = { workspace = true }
glyim-span = { workspace = true }
glyim-hir = { workspace = true }
glyim-def-map = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
glyim-test = { workspace = true }

[lints.clippy]
warnings = "deny"
