[package]
name = "glyip"
version = "0.1.0"
edition = "2024"
description = "Cargo-like build tool for the Glyim compiler"

[[bin]]
name = "glyip"
path = "src/bin/glyip.rs"

[features]
default = []
llvm = ["glyim-codegen-llvm"]

[dependencies]
glyim-core = { workspace = true }
glyim-diag = { workspace = true }
glyim-pipeline = { workspace = true }
glyim-db = { workspace = true }
glyim-codegen = { workspace = true }
glyim-codegen-llvm = { workspace = true, optional = true }
glyim-vfs = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
glyim-test = { workspace = true }
tempfile = { workspace = true }
