[package]
name = "glyim-pilot"
version = "0.3.0"
edition = "2021"
description = "Autonomous AI agent dispatch for Glyim compiler development"
license = "MIT"

[[bin]]
name = "glyim-pilot"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
async-trait = "0.1"
tokio-tungstenite = "0.29"
regex = "1.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
comfy-table = "7"
chrono = { version = "0.4", features = ["serde"] }
path-clean = "1"
dunce = "1"
walkdir = "2"
ignore = "0.4"
strip-ansi-escapes = "0.2"
uuid = { version = "1", features = ["v4"] }
prometheus = { version = "0.13", optional = true }

[dev-dependencies]
proptest = "1.11"
tempfile = "3"
tokio-test = "0.4"
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"

[features]
default = []
prometheus = ["dep:prometheus"]
